# Real-Time-Dithering

./: 404.html  README.md  index.html
assets/: BayerOrdered-PvgqOfBo.js  FloydSteinberg-ChU9L5Kt.js  FloydSteinberg-Dz88eXiH.js  P5CanvasGuard-C8nUc3qi-Dc154Jh6.js  P5CanvasWithSketch-BJbcv8Gr-B13wRWYX.js  P5CanvasWithSketch-BJbcv8Gr-BM_bRvFb.js  entry.client-gANhceH1.js  main.es-D2MorOr5.js  manifest-3af48d2f.js  root-BJ32zvc3.css
client/assets/: BayerOrdered-hAS7eE8L.js  P5CanvasGuard-C8nUc3qi-C_kjC-1W.js  chunk-WWGJGFF6-CLcwhb55.js  home-D7XikM17.css  home-DXjpuDL2.js  main.es-_h-BPY0W.js  manifest-1b6bc1e9.js  react-error-boundary-yKHK87iG-shdjia9a.js  root-COymCA7h.css  root-DRSM5G-p.js
server/: index.js
src/cpp-desktop/: CMakeLists.txt  main.cpp
src/my-react-router-app/: package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
src/my-react-router-app/app/: root.tsx  routes.ts
src/my-react-router-app/app/canvas/: boilerplate.tsx
src/my-react-router-app/app/dithering/: BayerOrdered.tsx  FloydSteinberg.tsx
src/my-react-router-app/app/fonts/jmh_typewriter/: Typewriter.css
src/my-react-router-app/app/welcome/: welcome.css  welcome.tsx
